# SuperBot

./: .gitignore  README.md  pyproject.toml
src/super_bot/: __about__.py  __init__.py  duration.py  extra_random.py  interval.py  point_in_time.py  sequences.py  super_bot.py  timer.py
tests/: __init__.py
